--- a/.config/i3/config
+++ b/.config/i3/config
@@ -169,7 +169,7 @@ exec xfsettingsd
 # gnome terminal is bae
 bindsym $mod+b exec google-chrome-stable # launch chrome (mod+b)
 bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
-bindsym $mod+m exec mumble # launch mumble (mod+m)
+bindsym $mod+m exec spotify # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-fancy # lock screen (mod+l)
 bindsym $mod+n exec gnome-terminal -e nmtui # launch networkmanager config tool (mod+n)
 bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quick screenshots (mod+prntscrn)
