--- a/.config/i3/config
+++ b/.config/i3/config
@@ -166,6 +166,7 @@ exec dropbox
 exec polybar koyu
 exec xfsettingsd
 exec synclient VertScrollDelta=-75
+exec echo enable,0xffffffff | sudo tee /proc/acpi/ibm/hotkey
 
 # custom bindsyms
 # gnome terminal is bae
