--- a/.config/i3/config
+++ b/.config/i3/config
@@ -166,11 +166,12 @@ exec dropbox
 exec polybar koyu
 exec xfsettingsd
 exec synclient VertScrollDelta=-75
+exec synclient TapButton1=1
 exec echo enable,0xffffffff | sudo tee /proc/acpi/ibm/hotkey
 
 # custom bindsyms
 # gnome terminal is bae
-bindsym $mod+b exec firefox # launch firefox (mod+b)
+bindsym $mod+b exec google-chrome-stable # launch firefox (mod+b)
 bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
 bindsym $mod+m exec spotify # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-fancy # lock screen (mod+l)
@@ -179,7 +180,7 @@ bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quic
 bindsym $mod+a exec gnome-terminal -e alsamixer # launch alsa mixer (mod+a)
 bindsym $mod+h exec gnome-terminal -e htop # launch htop (mod+h)
 bindsym $mod+k exec surf https://pinafore.social # launch pinafore (mod+k)
-bindsym $mod+e exec thunderbird
+bindsym $mod+e exec evolution
 
 # shutdown and reboot bindsyms
 # those resemble my display manager "ly" except that you
