--- a/.config/i3/config
+++ b/.config/i3/config
@@ -173,7 +173,7 @@ exec echo enable,0xffffffff | sudo tee /proc/acpi/ibm/hotkey
 # gnome terminal is bae
 bindsym $mod+b exec google-chrome-stable # launch firefox (mod+b)
 bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
-bindsym $mod+m exec spotify # launch spotify (mod+m)
+bindsym $mod+m exec spotify --no-zygote # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-fancy # lock screen (mod+l)
 bindsym $mod+n exec gnome-terminal -e nmtui # launch networkmanager config tool (mod+n)
 bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quick screenshots (mod+prntscrn)
