--- a/.config/i3/config
+++ b/.config/i3/config
@@ -183,6 +183,7 @@ bindsym $mod+h exec gnome-terminal -e htop # launch htop (mod+h)
 bindsym $mod+k exec surf https://pinafore.social # launch pinafore (mod+k)
 bindsym $mod+e exec evolution # launch e-mail clent (mod+e)
 bindsym $mod+c exec discord # launch discord (mod+c)
+bindsym $mod+v exec mumble # launch mumble (mod+v)
 
 # shutdown and reboot bindsyms
 # those resemble my display manager "ly" except that you
