--- a/.config/i3/config
+++ b/.config/i3/config
@@ -169,6 +169,7 @@ exec synclient VertScrollDelta=-75
 exec synclient TapButton1=1
 exec echo enable,0xffffffff | sudo tee /proc/acpi/ibm/hotkey
 exec sudo /bin/light -S 100
+exec i3-notifier
 
 # custom bindsyms
 # gnome terminal is bae
