--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -213,7 +213,7 @@ interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
-label-connected = %{A1:gnome-terminal -e nmtui:}%essid%%{A}
+label-connected = %{A1:nm-connection-editor:}%essid%%{A}
 
 ;format-disconnected =
 format-disconnected = <label-disconnected>
