Add rofi window support

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -184,6 +184,7 @@ bindsym $mod+k exec surf https://pinafore.social # launch pinafore (mod+k)
 bindsym $mod+e exec evolution # launch e-mail clent (mod+e)
 bindsym $mod+c exec discord # launch discord (mod+c)
 bindsym $mod+v exec mumble # launch mumble (mod+v)
+bindsym $mod+w exec rofi -show window # launch rofi window view (mod+w)
 
 # shutdown and reboot bindsyms
 # those resemble my display manager "ly" except that you
