--- a/.config/i3/config
+++ b/.config/i3/config
@@ -172,7 +172,7 @@ exec sudo /bin/light -S 100
 
 # custom bindsyms
 # gnome terminal is bae
-bindsym $mod+b exec google-chrome-stable # launch firefox (mod+b)
+bindsym $mod+b exec firefox # launch firefox (mod+b)
 bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
 bindsym $mod+m exec spotify --no-zygote # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-koyu # lock screen (mod+l)
