--- a/.config/i3/config
+++ b/.config/i3/config
@@ -185,6 +185,7 @@ bindsym $mod+e exec evolution # launch e-mail clent (mod+e)
 bindsym $mod+c exec discord # launch discord (mod+c)
 bindsym $mod+v exec mumble # launch mumble (mod+v)
 bindsym $mod+w exec rofi -show window # launch rofi window view (mod+w)
+bindsym $mod+g exec gnome-terminal -e amfora # launch amfora (mod+g)
 
 # shutdown and reboot bindsyms
 # those resemble my display manager "ly" except that you
