Partially using flatpaks

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -161,7 +161,7 @@ exec setxkbmap de
 exec xcompmgr
 exec unclutter
 exec feh --bg-scale /home/koyu/.bg.png
-exec telegram-desktop -startintray
+exec flatpak run org.telegram.desktop -startintray
 exec dropbox
 exec polybar koyu
 exec xfsettingsd
@@ -173,8 +173,8 @@ exec sudo /bin/light -S 100
 # custom bindsyms
 # gnome terminal is bae
 bindsym $mod+b exec firefox # launch firefox (mod+b)
-bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
-bindsym $mod+m exec spotify --no-zygote # launch spotify (mod+m)
+bindsym $mod+t exec flatpak run org.telegram.desktop # launch telegram (mod+t)
+bindsym $mod+m exec flatpak run com.spotify.Client --no-zygote # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-koyu # lock screen (mod+l)
 bindsym $mod+n exec gnome-terminal -e nmtui # launch networkmanager config tool (mod+n)
 bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quick screenshots (mod+prntscrn)
@@ -182,7 +182,7 @@ bindsym $mod+a exec gnome-terminal -e alsamixer # launch alsa mixer (mod+a)
 bindsym $mod+h exec gnome-terminal -e htop # launch htop (mod+h)
 bindsym $mod+k exec surf https://pinafore.social # launch pinafore (mod+k)
 bindsym $mod+e exec evolution # launch e-mail clent (mod+e)
-bindsym $mod+c exec discord # launch discord (mod+c)
+bindsym $mod+c exec com.discordapp.Discord # launch discord (mod+c)
 bindsym $mod+v exec mumble # launch mumble (mod+v)
 bindsym $mod+w exec rofi -show window # launch rofi window view (mod+w)
 bindsym $mod+g exec gnome-terminal -e amfora # launch amfora (mod+g)
