--- a/.config/i3/config
+++ b/.config/i3/config
@@ -42,6 +42,8 @@ bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
 bindsym $mod+d exec rofi -show run
+# start rofi in ssh mode
+bindsym $mod+s exec rofi -show ssh
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
