--- a/.config/i3/config
+++ b/.config/i3/config
@@ -167,14 +167,10 @@ exec telegram-desktop -startintray
 exec dropbox
 exec polybar koyu
 exec xfsettingsd
-exec synclient VertScrollDelta=-75
-exec synclient TapButton1=1
-exec echo enable,0xffffffff | sudo tee /proc/acpi/ibm/hotkey
-exec sudo /bin/light -S 100
 
 # custom bindsyms
 # gnome terminal is bae
-bindsym $mod+b exec google-chrome-stable # launch chrome (mod+b)
+bindsym $mod+b exec firefox # launch firefox (mod+b)
 bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
 bindsym $mod+m exec gnome-terminal -e spotify-client # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-koyu # lock screen (mod+l)
@@ -188,7 +184,6 @@ bindsym $mod+c exec discord # launch discord (mod+c)
 bindsym $mod+v exec mumble # launch mumble (mod+v)
 bindsym $mod+w exec rofi -show window # launch rofi window view (mod+w)
 bindsym $mod+g exec gnome-terminal -e amfora # launch amfora (mod+g)
-bindsym $mod+Shift+t exec synclient TouchpadOff=$(synclient -l | grep -c 'TouchpadOff.*=.*0') # toggle touchpad (mod+shift+t)
 bindsym $mod+o exec surf https://onenote.office.com # launch onenote
 
 # shutdown and reboot bindsyms
