--- a/.config/i3/config
+++ b/.config/i3/config
@@ -191,8 +191,8 @@ bindsym $mod+Shift+a exec gnome-terminal -e ani-cli
 # those resemble my display manager "ly" except that you
 # have to press mod+shift so you don't power down your
 # machine by accident
-bindsym $mod+Shift+F1 exec poweroff # shutdown
-bindsym $mod+Shift+F2 exec reboot # reboot
+bindsym $mod+Shift+F1 exec sudo poweroff # shutdown
+bindsym $mod+Shift+F2 exec sudo reboot # reboot
 
 # remove window borders
 new_window pixel 0
