--- a/.config/i3/config
+++ b/.config/i3/config
@@ -178,7 +178,7 @@ bindsym $mod+n exec gnome-terminal -e nmtui # launch networkmanager config tool 
 bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quick screenshots (mod+prntscrn)
 bindsym $mod+a exec gnome-terminal -e alsamixer # launch alsa mixer (mod+a)
 bindsym $mod+h exec gnome-terminal -e htop # launch htop (mod+h)
-bindsym $mod+k exec surf https://pinafore.social # launch pinafore (mod+k)
+bindsym $mod+k exec surf https://bloatest.koyu.space # launch bloatest (mod+k)
 bindsym $mod+e exec thunderbird # launch e-mail clent (mod+e)
 bindsym $mod+c exec discord # launch discord (mod+c)
 bindsym $mod+v exec mumble # launch mumble (mod+v)
