--- a/.config/i3/config
+++ b/.config/i3/config
@@ -40,10 +40,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start rofi (a program launcher)
-bindsym $mod+d exec rofi -show run
-# start rofi in ssh mode
-bindsym $mod+s exec rofi -show ssh
+# start dmenu (a program launcher)
+bindsym $mod+d exec "dmenu_run -nf '#BBBBBB' -nb '#222233' -sb '#222233' -sf '#EEEEEE' -fn 'monospace-10' -p 'dmenu prompt &gt;'"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
