--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "dmenu_run -nf '#BBBBBB' -nb '#222233' -sb '#222233' -sf '#EEEEEE' -fn 'monospace-10' -p 'dmenu prompt &gt;'"
+bindsym $mod+d exec "dmenu_run -nf '#BBBBBB' -nb '#222233' -sb '#222233' -sf '#EEEEEE' -fn 'monospace-10' -p 'run> '"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
