--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "dmenu_run -nf '#BBBBBB' -nb '#222233' -sb '#222233' -sf '#EEEEEE' -fn 'monospace-10' -p 'run> '"
+bindsym $mod+d exec "dmenu_run -b -nf '#BBBBBB' -nb '#222233' -sb '#222233' -sf '#EEEEEE' -fn 'monospace-10' -p 'run> '"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -177,7 +177,7 @@ bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quic
 bindsym $mod+a exec gnome-terminal -e alsamixer # launch alsa mixer (mod+a)
 bindsym $mod+h exec gnome-terminal -e htop # launch htop (mod+h)
 bindsym $mod+k exec surf https://bloatest.koyu.space # launch bloatest (mod+k)
-bindsym $mod+e exec thunderbird # launch e-mail clent (mod+e)
+bindsym $mod+e exec evolution # launch e-mail clent (mod+e)
 bindsym $mod+c exec discord # launch discord (mod+c)
 bindsym $mod+v exec mumble # launch mumble (mod+v)
 bindsym $mod+w exec rofi -show window # launch rofi window view (mod+w)
