--- a/.config/i3/config
+++ b/.config/i3/config
@@ -173,7 +173,7 @@ bindsym $mod+t exec telegram-desktop # launch telegram (mod+t)
 bindsym $mod+m exec gnome-terminal -e spotify-client # launch spotify (mod+m)
 bindsym $mod+l exec i3lock-koyu # lock screen (mod+l)
 bindsym $mod+n exec gnome-terminal -e nmtui # launch networkmanager config tool (mod+n)
-bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quick screenshots (mod+prntscrn)
+# bindsym $mod+Print exec imgur-screenshot # launch imgur screenshot tool for quick screenshots (mod+prntscrn)
 bindsym $mod+a exec gnome-terminal -e alsamixer # launch alsa mixer (mod+a)
 bindsym $mod+h exec gnome-terminal -e htop # launch htop (mod+h)
 bindsym $mod+k exec surf https://bloatest.koyu.space # launch bloatest (mod+k)
